trying to fix tabs jump

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -619,7 +619,7 @@ input {
 	font-family: futura, Helvetica;
 }
 #error_explanation {
-	background-color: #ccff00;
+	background-color: #FFb300;
 	li {
 		padding-bottom: 10px;
 		color: #f00;
